# Coords

./: .gitignore  Cargo.toml  README.md  text.html
docs/: future_ideas.md
example_data/: origin_1.txt
src/: lib.rs  main.rs  saveandload.rs
tests/: lib_tests.rs
tests/files/: test_data.csv  test_data.json  test_text.txt
